force-app/main/default/objects/Teach__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Teachs</relationshipLabel>
    <relationshipName>Teachs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>