force-app/main/default/objects/Teach__c/fields/Teacher__c.field-meta.xml
<CustomField>
    <fullName>Teacher__c</fullName>
    <label>Teacher</label>
    <referenceTo>Contact__c</referenceTo>
    <relationshipLabel>Tachs</relationshipLabel>
    <relationshipName>Tachs</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>